[package]
name = "smplfetch"
description = "A simple fetch script... but in Rust!"
version = "0.1.0"
edition = "2021"
authors = ["Daksh Kaul", "daksh <dakshkaul7790@gmail.com>"]
license = "GPL-2.0-or-later"
repository = "https://github.com/DriftingOtter/smplfetch_rs.git"
readme = "README.md"
keywords = ["fetch script", "fetch", "sysinfo", "system fetch"]

[dependencies]
chrono = "0.4.38"
sysinfo = "0.30.12"
termcolor = "1.4.1"
whoami = "1.5.1"

[package.metadata.docs.rs]
features = ["default"]

